--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,10 @@ dependencies:
   pinput: ^3.0.1
   modal_bottom_sheet: ^2.1.2
   get_it: any
-
+  image_picker: ^1.0.7
+  file_picker: ^6.1.1
+  open_file: any
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
