--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   file_picker: ^6.1.1
   open_file: any
   smooth_page_indicator: ^1.1.0
+  flutter_bloc: any
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/images/category/
 
   # fonts:
   #   - family: Schyler
